--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,26 @@
 body{
     font-family: "Poppins", sans-serif;
 }
+
+/* Customize the entire scrollbar */
+::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+    height: 10px; /* Height of the scrollbar */
+  }
+  
+  /* Customize the track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color of the track */
+  }
+  
+  /* Customize the handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c7c7c7; /* Color of the handle */
+    border-radius: 10px; /* Rounded corners of the handle */
+  }
+  
+  /* Customize the handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3; /* Color of the handle on hover */
+  }
+  
